[project]
name = "ait-724-handson-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datashader>=0.18.2",
    "holoviews>=1.21.0",
    "hvplot>=0.12.1",
    "igraph>=1.0.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-louvain>=0.16",
    "pyvis>=0.3.2",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
